# packages/collector/api.yaml
@@ -3,7 +3,40 @@ info:
   title: gardner samples collecting service
   version: '1.0.0'
 paths:
-  /next-sample:
+  /schedule:
+    post:
+      summary: re-write a complete sampling schedule
+      description: you can set a sample every (n) hours, or your own custom schedule (an array of hours) in a 24 hour clock
+      requestBody:
+        content:
+          application/json:
+            schema:
+              oneOf:
+                - type: object
+                  properties:
+                    schedule:
+                      type: array
+                      items:
+                        type: number
+                - type: object
+                  properties:
+                    every:
+                      type: number
+      responses:
+        '201':
+          $ref: '#/components/responses/CreatedSchedule'
+
+    get:
+      summary: fetch the schedule in a 24 hour clock
+      responses:
+        '200':
+          description: the list of hours to sample
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Schedule'
+
+  /schedule/next-sample:
     get:
       summary: get minutes until next sample
       responses:
@@ -49,6 +82,13 @@ paths:
 
 components:
   schemas:
+    Schedule:
+      type: object
+      properties:
+        schedule:
+          type: array
+          items:
+            type: number
     Sample:
       type: object
       properties:
@@ -72,3 +112,10 @@ components:
       properties:
         minutes:
           type: number
+  responses:
+    CreatedSchedule:
+      description: 'the schedule was set'
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Schedule'
