# packages/collector/src/app.js
@@ -3,7 +3,9 @@ const path = require('path');
 const express = require('express');
 const bodyParser = require('body-parser');
 const logger = require('morgan');
-const router = require('./router');
+const samplesRouter = require('./samples.router');
+const sampleRouter = require('./sample.router');
+const scheduleRouter = require('./schedule.router');
 const swaggerUi = require('swagger-ui-express');
 const errMiddleware = require('./errors/middleware');
 const YAML = require('yamljs');
@@ -29,6 +31,8 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(logger('dev'));
 app.use(bodyParser.json());
 
-app.use('/', dataSources, router);
+app.use('/samples', dataSources, samplesRouter);
+app.use('/sample', dataSources, sampleRouter);
+app.use('/schedule', dataSources, scheduleRouter);
 app.use(errMiddleware);
 module.exports = { app };
